完善Controler武器攻击

--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -8,10 +8,12 @@
 	RenderDebugState:
 	ActorControler:
 		TargetCursor: nuke
-	InaccuracyMultiplier:
-		Modifier: 120
-		RequiresCondition: !under-control
-
+	InaccuracyMultiplier@controler:
+		Modifier: 75
+		RequiresCondition: under-control
+	RangeMultiplier@controler:
+		RequiresCondition: under-control
+		Modifier: 115
 
 ^SpriteActor:
 	BodyOrientation:
