--- a/mods/ts/weapons/missiles.yaml
+++ b/mods/ts/weapons/missiles.yaml
@@ -58,11 +58,11 @@
 		JetSequence: mislflash1
 		JetPalette: gray
 
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Spread: 108
 		Falloff: 100, 50, 25, 12, 6, 3, 0
 		Damage: 5500
-		ValidTargets: Ground, Water, Air, Trees
+		ValidTargets: Ground, Water, Air
 		Versus:
 			None: 25
 			Wood: 65
@@ -90,7 +90,7 @@
 	Report: hovrmis1.aud
 	ReloadDelay: 60
 	MinRange: 1c0
-	ValidTargets: Ground, Water, Air, Trees
+	ValidTargets: Ground, Water, Air
 	TargetActorCenter: true
 	Projectile: VectorBooster
 		HorizonRotationRate: 15
@@ -160,7 +160,7 @@
 		Spread: 0c108
 		Falloff: 100, 50, 25, 12, 6, 3, 0
 		Damage: 6000
-		ValidTargets: Ground, Water, Air, Trees
+		ValidTargets: Ground, Water, Air
 		Versus:
 			None: 25
 			Wood: 65
@@ -206,7 +206,7 @@ HoverMissile:
 	ReloadDelay: 40
 	Range: 9c0
 	Report: hovrmis1.aud
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Damage: 4500
 		Versus:
 			None: 25
@@ -251,7 +251,7 @@ LimpetMissile:
 	Inherits: BikeMissile
 	Range: 6c512
 	ReloadDelay: 90
-	ValidTargets: Ground, Water, Air, Trees
+	ValidTargets: Ground, Water, Air
 	Projectile: VectorBooster
 		LaunchAngle: 253
 		LockOnDelay: 16
@@ -312,11 +312,11 @@ ReaperScytheScat:
 		JetSequence: mislflash1small
 		InaccuracyType: Absolute
 		LaunchAngle: 220
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Spread: 108
 		Falloff: 100, 50, 25, 12, 6, 3, 0
 		Damage: 2250
-		ValidTargets: Ground, Water, Air, Trees
+		ValidTargets: Ground, Water, Air
 		Versus:
 			None: 25
 			Wood: 65
@@ -330,10 +330,9 @@ MammothTusk:
 	ReloadDelay: 80
 	Report: hovrmis1.aud
 	Burst: 2
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Spread: 144
 		Damage: 6400
-		# ValidTargets: Air
 		Versus:
 			None: 100
 			Wood: 85
@@ -387,7 +386,7 @@ Dragon:
 	ReloadDelay: 33
 	Burst: 2
 	Report: misl1.aud
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Damage: 4500
 
 Hellfire:
@@ -395,10 +394,10 @@ Hellfire:
 	ReloadDelay: 30
 	Report: orcamis1.aud
 	ValidTargets: Ground, Water, Air
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Spread: 72
 		Damage: 3000
-		ValidTargets: Ground, Water, Air, Trees
+		ValidTargets: Ground, Water, Air
 		Versus:
 			None: 30
 			Wood: 65
@@ -419,7 +418,6 @@ VectorHellfire:
 	Inherits: ^VectorBooster
 	ReloadDelay: 10
 	Report: orcamis1.aud
-	ValidTargets: Ground, Water, Air
 	Projectile: VectorBooster
 		HorizonRotationRate: 14
 		VerticalRotationRate: 12
@@ -501,7 +499,7 @@ ProtonFlameMissile:
 		ScatFootprint: __x__ _xxx_ xx_xx _xxx_ __x__
 		JetPalette: lightgreen
 		LifeTime: 40
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Damage: 3000
 		Versus:
 			None: 25
@@ -527,7 +525,7 @@ ProtonFlameMissileCluster:
 		LockOnTargetTypes: Air
 		HorizonRotationRate: 13
 		VerticalRotationRate: 32
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Damage: 6000
 		Versus:
 			None: 25
@@ -556,7 +554,7 @@ GreenScytheScat:
 		ContrailStartColor: 00FF00
 		ContrailStartColorOuter: AAAA00
 		JetPalette: lightgreen
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Damage: 6000
 		Versus:
 			None: 25
@@ -617,7 +615,7 @@ LauncherMultiCluster:
 		AllowSnapping: false
 		HorizonRotationRate: 14
 		VerticalRotationRate: 11
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Spread: 458
 		Damage: 20000
 		ValidTargets: Ground, Water, Air, Trees
