--- a/mods/ts/weapons/otherweapons.yaml
+++ b/mods/ts/weapons/otherweapons.yaml
@@ -205,7 +205,7 @@ Bomb:
 		Image: zbomb
 		Palette: player
 		IsPlayerPalette: true
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Spread: 512
 		Falloff: 100, 50, 25, 12, 6, 3, 0
 		Damage: 16000
@@ -216,7 +216,7 @@ Bomb:
 			Heavy: 32
 			Concrete: 100
 		DamageTypes: Prone100Percent, TriggerProne, ExplosionDeath
-		ValidTargets: Ground, Trees
+		ValidTargets: Ground, Water, Air
 	Warhead@2Eff: CreateEffect
 		Explosions: large_explosion
 		ImpactSounds: expnew09.aud
@@ -259,7 +259,7 @@ A10Napalm:
 	# 	Palette: effect
 	# 	BounceCount: 5
 	# 	Width: 324
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Spread: 512
 		Falloff: 100, 50, 25, 12, 6, 3, 0
 		Damage: 16000
@@ -270,7 +270,7 @@ A10Napalm:
 			Heavy: 32
 			Concrete: 100
 		DamageTypes: Prone100Percent, TriggerProne, ExplosionDeath
-		ValidTargets: Ground, Trees
+		ValidTargets: Ground, Water, Air
 	Warhead@2Eff: CreateEffect
 		Explosions: large_brnl
 		ImpactSounds: expnew09.aud
@@ -298,13 +298,14 @@ FiendShard:
 		Shadow: true
 		LaunchAngle: 60
 		Palette: greentiberium
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Damage: 3500
 		Versus:
 			Light: 60
 			Heavy: 40
 			Concrete: 20
 		DamageTypes: Prone100Percent, TriggerProne, BulletDeath
+		ValidTargets: Ground, Water, Air
 	Warhead@3EffWater: CreateEffect
 		Explosions: small_watersplash
 		ExplosionPalette: player
@@ -318,7 +319,7 @@ SlimeAttack:
 	Report: vicer1.aud
 	Projectile: InstantHit
 	InvalidTargets: Wall, Bridge
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Damage: 10000
 		InvalidTargets: Wall, Bridge
 		Versus:
@@ -326,6 +327,7 @@ SlimeAttack:
 			Heavy: 40
 			Concrete: 20
 		DamageTypes: Prone100Percent, TriggerProne, SmallExplosionDeath
+		ValidTargets: Ground, Water, Air
 
 Tentacle:
 	ReloadDelay: 80
@@ -335,11 +337,12 @@ Tentacle:
 		ScatWeapons: TentacleElectric
 		ScatCounts: 1
 	InvalidTargets: Wall, Bridge
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Damage: 10000
 		Spread: 0c425
 		Falloff: 100, 75, 75, 35, 15, 3
 		InvalidTargets: Wall, Bridge, Floater
+		ValidTargets: Ground, Water, Air
 		Versus:
 			None: 100
 			Wood: 45
@@ -367,10 +370,11 @@ TentacleElectric:
 		Image: litning
 		SpriteTopToDown: true
 		Sequences: litning1, litning2, litning3
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Spread: 0c122
 		Falloff: 100, 75, 35
 		InvalidTargets: Wall, Bridge, Floater
+		ValidTargets: Ground, Water, Air
 		Damage: 8000
 		Versus:
 			None: 100
@@ -400,7 +404,7 @@ Veins:
 		Shadow: true
 		Blockable: false
 		OnlyHitToExplode: true
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Spread: 200
 		Falloff: 100, 100, 0
 		Damage: 1000
@@ -411,6 +415,7 @@ Veins:
 			Heavy: 35
 			Concrete: 28
 		DamageTypes: Prone100Percent, TriggerProne, ExplosionDeath
+		ValidTargets: Ground, Water, Air
 	Warhead@2Eff: CreateEffect
 		Explosions: tiny_twlt
 		ValidTargets: Ground, Air
@@ -432,7 +437,7 @@ LargeDebris:
 	Projectile: Bullet
 		Image: dbrislg
 		Sequences: 2, 3, 4, 6, 7, 9, 10
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Spread: 320
 		Damage: 2000
 	Warhead@2Eff: CreateEffect
@@ -466,7 +471,7 @@ TiberiumDebris:
 		ImpactSounds: ssplash3.aud
 		ValidTargets: Water
 		InvalidTargets: Vehicle
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Spread: 200
 		Falloff: 100, 100, 0
 		Damage: 1000
@@ -483,7 +488,7 @@ TiberiumDebris:
 		ValidTargets: Ground, Air
 		Density: 1, 2
 
-VeinholeTest:
+VeinholeSpray:
 	ReloadDelay: 80
 	Range: 5c535
 	Report: flamtnk1.aud
@@ -493,7 +498,7 @@ VeinholeTest:
 		ScatWeapons: ChemicalSprayer
 		ScatCounts: 35
 		Inaccuracy: 1c0
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 
 
 FloaterSpray:
@@ -653,7 +658,7 @@ JumpTakeOffExplode:
 		ImpactSounds: expnew13.aud
 
 JumpLandExplode:
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Spread: 256
 		Falloff: 100, 50, 25, 12, 6, 3, 0
 		Damage: 50000
