--- a/mods/ts/weapons/superweapons.yaml
+++ b/mods/ts/weapons/superweapons.yaml
@@ -18,7 +18,7 @@ MultiCluster:
 		AirburstAltitude: 5c0
 		Width: 40
 		MeshScale: 3
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Spread: 458
 		Damage: 22000
 		ValidTargets: Ground, Water, Air, Trees
@@ -71,7 +71,7 @@ ClusterMissile:
 		ContrailStartColorAlpha: 152
 		ContrailStartColorAlphaOuter: 0
 		Inaccuracy: 0
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Spread: 512
 		Falloff: 100, 100, 0
 		Damage: 26000
@@ -166,7 +166,7 @@ ChemicalCluster:
 		HorizonRotationRate: 33
 		VerticalRotationRate: 22
 		JetPalette: lightgreen
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Spread: 458
 		Damage: 6000
 		ValidTargets: Ground, Water, Air, Trees
@@ -208,7 +208,7 @@ SuicideDash:
 		ScatCounts: 1
 		Inaccuracy: 0
 	ValidTargets: Vehicle, Building, Defense, Infantry
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Spread: 1
 
 HunterDash:
@@ -287,7 +287,7 @@ HunterDash:
 
 IonCannon:
 	ValidTargets: Ground, Water, Air, Trees
-	Warhead@1Dam_impact: SpreadDamage
+	Warhead@1Dam_impact: Spread3DDamage
 		Spread: 1c0
 		Damage: 10000
 		Falloff: 1000, 368, 135, 50, 18, 7, 0
