--- a/mods/ts/rules/gdi-vehicles.yaml
+++ b/mods/ts/rules/gdi-vehicles.yaml
@@ -35,6 +35,7 @@ APC:
 		UnloadVoice: Unload
 		LoadingCondition: loading
 		EjectOnDeath: true
+		LoadedCondition: loaded
 	GrantConditionOnTerrain:
 		Condition: inwater
 		TerrainTypes: Water
@@ -74,6 +75,11 @@ APC:
 		PauseOnCondition: empdisable
 		Voice: Move
 		TargetLineColor: FFFF00
+	AutoDeployer@AI:
+		RequiresCondition: AImicroManage && loaded
+		DeployChance: 100
+		DeployTicks: 200
+		UndeployTicks: 0
 	-RevealOnFire:
 
 HVR:
