--- a/mods/ts/weapons/smallguns.yaml
+++ b/mods/ts/weapons/smallguns.yaml
@@ -6,9 +6,9 @@
 	Report: infgun_a.wav, infgun_b.wav, infgun_c.wav, infgun_d.wav
 	BurstDelays: 1
 	Projectile: Bullet
-		DetectTargetFromLength: 0.7
+		DetectTargetFromLengthPercentage: 70
 		DetectTargetBeforeDist: 2c0
-		
+
 		ContrailZOffset: 22
 		ContrailLength: 3
 		ContrailWidth: 50
