--- a/mods/ts/weapons/energyweapons.yaml
+++ b/mods/ts/weapons/energyweapons.yaml
@@ -376,6 +376,7 @@ Proton:
 	Warhead@1Dam: Spread3DDamage
 		Spread: 96
 		Falloff: 100, 45, 12, 3
+		ValidTargets: Ground, Water, Air
 		Damage: 25000
 		Versus:
 			None: 100
@@ -418,6 +419,7 @@ Proton:
 		Spread: 96
 		Falloff: 100, 45, 12, 3
 		Damage: 25000
+		ValidTargets: Ground, Water, Air
 		Versus:
 			None: 100
 			Wood: 100
@@ -515,23 +517,14 @@ LaserChainGun:
 	Warhead@flash: CreateEffect
 		ExplosionPalette: lightgreen
 
-KittenProtonPulse:
-	Inherits: ProtonPulse
-	Range: 9c0
-	ReloadDelay: 3
+KittenRailGun:
+	Inherits: MechRailgun
+	Range: 11c0
+	ReloadDelay: 80
 	Burst: 1
 	BurstDelays: 1
-	Warhead@1Dam: Spread3DDamage
-		Spread: 0c172
-		Damage: 2000
-		Versus:
-			None: 100
-			Wood: 65
-			Light: 75
-			Heavy: 100
-			Concrete: 60
-		DamageTypes: Prone50Percent, TriggerProne, EnergyDeath
-		ValidTargets: Ground, Water, Air, Trees
+	ValidTargets: Ground, Water, Air, Trees
+
 
 # banshee proton pulse cannon
 ProtonPulse:
