--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -17,6 +17,12 @@
 	RevealsShroudMultiplier@under-control:
 		Modifier: 115
 		RequiresCondition: under-control
+	DamageMultiplier@avoidtarget:
+		RequiresCondition: avoidtarget
+		Modifier: 0
+	Targetable@avoidtarget:
+		RequiresCondition: avoidtarget
+		TargetTypes: Ignored
 
 ^SpriteActor:
 	BodyOrientation:
@@ -834,11 +840,6 @@
 		UseClassicPerspectiveFudge: False
 		CameraPitch: 85
 		QuantizedFacings: 8
-	ConsumableItem:
-		ThumbnailSequence: testdisplay
-		ThumbnailPalette: player
-		ThumbnailPaletteIsPlayerPalette: true
-		Weapon: Consume
 
 ^RegularInfantryDeath:
 	WithDeathAnimation@normal:
@@ -1512,9 +1513,6 @@
 		Type: Circle
 			Radius: 134
 			VerticalTopOffset: 612
-	# BlocksProjectiles:
-	# 	IsBindage: true
-	# 	Height: 612
 	Health:
 		HP: 20000
 	Armor:
